tests/typechecker/should_fail/external_functions_2.csp
external transpose, mtransclose, relational_image, relational_inverse_image


Y = relational_image(transpose({(0,true)}))(0) == true
